feat: gtest setup and BaseFact tests created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,29 +20,17 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Explicitly list files for robustness instead of using GLOB
 set(ENGINE_SOURCES
     src/base_fact.cpp
-    src/pattern.cpp
-    src/constraint.cpp
-    src/rule.cpp
-    src/lhs_tree_node.cpp
+    # src/pattern.cpp       # Assuming these exist or will be added
+    # src/constraint.cpp
+    # src/rule.cpp
+    # src/lhs_tree_node.cpp
     # Add other .cpp files belonging to the core engine here
     # e.g., src/leap_network.cpp (when implemented)
 )
 
-# List the public header files if they are separate and need installing
-# (Often headers in include/ don't need explicit listing here unless installing)
-# set(ENGINE_HEADERS
-#     include/rule_engine/base_fact.hpp
-#     include/rule_engine/pattern.hpp
-#     # ... other public headers
-# )
-
 # Create the static or shared library for the rule engine core
 # Choose STATIC or SHARED based on your needs. STATIC is often simpler initially.
 add_library(RuleEngineCore STATIC ${ENGINE_SOURCES}) # Or SHARED
-
-# Set C++ standard specifically for the library target (alternative to global set)
-# target_compile_features(RuleEngineCore PUBLIC cxx_std_17)
-# target_compile_options(RuleEngineCore PRIVATE -Wall -Wextra -pedantic) # Example compiler flags
 
 # Tell CMake where to find header files for the RuleEngineCore library
 # PUBLIC: Consumers of RuleEngineCore also need this include path
@@ -59,48 +47,48 @@ target_include_directories(RuleEngineCore
 # --- Define Example Executable Using the Engine ---
 
 # Create an executable (e.g., for testing, examples, or the main application)
-add_executable(RuleEngineApp src/main.cpp) # Assuming you have a main.cpp
+# Ensure you have a src/main.cpp or remove/comment this section if not needed yet
+add_executable(RuleEngineApp src/main.cpp)
 
 # Link the executable against the core engine library
 target_link_libraries(RuleEngineApp PRIVATE RuleEngineCore)
 
 # --- Optional: Link External Libraries (Example) ---
-# If RuleEngineCore needs external libraries:
-# find_package(Boost REQUIRED COMPONENTS system filesystem)
-# target_link_libraries(RuleEngineCore PUBLIC Boost::system Boost::filesystem) # PUBLIC if headers from Boost are in your public headers
-# If only RuleEngineApp needs external libraries:
-# find_package(SomeOtherLib REQUIRED)
-# target_link_libraries(RuleEngineApp PRIVATE SomeOtherLib::SomeOtherLib)
+# ... (Keep your existing commented-out examples if desired) ...
 
 # --- Optional: Installation ---
-# Install the library, its public headers, and the executable
-# include(GNUInstallDirs) # Provides standard install paths (CMAKE_INSTALL_LIBDIR, etc.)
-# install(TARGETS RuleEngineCore
-#     EXPORT RuleEngineCoreTargets
-#     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Runtime
-#     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
-#     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime # For SHARED libs on Windows/Mac
-# )
-# install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Development) # Install public headers
-# install(TARGETS RuleEngineApp DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime)
+# ... (Keep your existing commented-out examples if desired) ...
 
-# # Generate and install the export file for CMake package configuration
-# install(EXPORT RuleEngineCoreTargets
-#     FILE RuleEngineCoreConfig.cmake
-#     NAMESPACE RuleEngine::
-#     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/RuleEngineCore
-# )
-
-# --- Optional: Testing (using CTest) ---
+# --- Testing (using CTest and GoogleTest) ---
 enable_testing()
 
-# Example: Add a test that runs the main executable
-add_test(NAME BasicRunTest COMMAND RuleEngineApp)
+# Find the GoogleTest package
+# Note: This requires GoogleTest to be installed on your system or discoverable
+# by CMake (e.g., via CMAKE_PREFIX_PATH). Alternatively, you could use
+# FetchContent or add_subdirectory to manage GoogleTest within your project.
+find_package(GTest REQUIRED)
 
-# Example: If you build a separate test executable using a framework like GoogleTest
-# find_package(GTest REQUIRED)
-# add_executable(RuleEngineTests tests/test_main.cpp tests/test_facts.cpp /*...other test files...*/)
-# target_link_libraries(RuleEngineTests PRIVATE RuleEngineCore GTest::gtest GTest::gtest_main)
-# include(GoogleTest)
-# gtest_discover_tests(RuleEngineTests)
+# Define the test executable
+add_executable(RuleEngineTests
+    tests/test_base_fact.cpp
+    # Add other test source files here as you create them, e.g.:
+    # tests/test_pattern.cpp
+)
+
+# Link the test executable against your core library and GoogleTest
+target_link_libraries(RuleEngineTests PRIVATE
+    RuleEngineCore     # Link against the library being tested
+    GTest::gtest       # GoogleTest framework library
+    GTest::gtest_main  # Provides the main() function for the test runner
+)
+
+# Include the GoogleTest module provided by CMake
+include(GoogleTest)
+
+# Automatically discover tests within the RuleEngineTests executable for CTest
+gtest_discover_tests(RuleEngineTests)
+
+# --- Optional: Add test that runs the main executable (if it exists) ---
+# If you have RuleEngineApp defined above and it's runnable for a basic check:
+# add_test(NAME BasicRunTest COMMAND RuleEngineApp)
 
