--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.15)
 
 # Define the project name, version (optional), and language
-project(Myrmidon VERSION 1.0 LANGUAGES CXX) # <--- CHANGED
+project(Myrmidon VERSION 1.0 LANGUAGES CXX)
 
 # --- Set C++ Standard (Globally or Per-Target) ---
 # Require C++17
@@ -20,6 +20,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Explicitly list files for robustness instead of using GLOB
 set(ENGINE_SOURCES
     src/base_fact.cpp
+    src/core/rule.cpp
     # src/pattern.cpp
     # src/constraint.cpp
     # src/rule.cpp
@@ -37,10 +38,14 @@ add_library(RuleEngineCore STATIC ${ENGINE_SOURCES}) # Or SHARED
 # PRIVATE: Only RuleEngineCore needs this path during its own compilation
 target_include_directories(RuleEngineCore
     PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> # Headers for consumers
-        $<INSTALL_INTERFACE:include> # Headers for consumers when installed (adjust path)
+        # Expose the 'include' directory for linking targets
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        # Define where headers will be installed (relative to CMAKE_INSTALL_PREFIX/include)
+        $<INSTALL_INTERFACE:include>
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src # If headers are alongside sources or private headers exist
+        # Internal include paths needed only by RuleEngineCore itself
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/core
 )
 
 # --- Define Example Executable Using the Engine ---
@@ -50,6 +55,7 @@ target_include_directories(RuleEngineCore
 add_executable(RuleEngineApp src/main.cpp)
 
 # Link the executable against the core engine library
+# RuleEngineApp inherits PUBLIC include directories from RuleEngineCore
 target_link_libraries(RuleEngineApp PRIVATE RuleEngineCore)
 
 # --- Optional: Link External Libraries (Example) ---
@@ -68,7 +74,18 @@ find_package(GTest REQUIRED)
 # (Target name RuleEngineTests is okay, or change to MyrmidonTests if preferred)
 add_executable(RuleEngineTests
     tests/test_base_fact.cpp
+    tests/core/test_rule.cpp
     # Add other test source files here as you create them
+)
+
+# Add include directories needed specifically by the test executable
+# This comes AFTER add_executable(RuleEngineTests ...)
+target_include_directories(RuleEngineTests PRIVATE
+    # It needs the public headers (could rely on inheritance, but explicit is fine)
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    # CRITICAL: It needs internal headers not inherited via linking
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/core
+    # Add ${CMAKE_CURRENT_SOURCE_DIR}/src if other internal headers are needed
 )
 
 # Link the test executable against your core library and GoogleTest
